돔을 이용해 HTML 객체 저장

--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -91,7 +91,7 @@
                     </li>
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm" href="/app/src/views/home/login.ejs">로그인</a>
+                    <a class="btn-outline-sm" href="./login.ejs">로그인</a>
                 </span>
             </div>
         </div> <!-- end of container -->
