로그인 페이지 css 적용

--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -22,11 +22,11 @@
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
-    <link href="/pages/css/bootstrap.css" rel="stylesheet">
-    <link href="/pages/css/fontawesome-all.css" rel="stylesheet">
-    <link href="/pages/css/swiper.css" rel="stylesheet">
-	<link href="/pages/css/magnific-popup.css" rel="stylesheet">
-	<link href="/pages/css/styles.css" rel="stylesheet">
+    <link href="/css/home/bootstrap.css" rel="stylesheet">
+    <link href="/css/home/fontawesome-all.css" rel="stylesheet">
+    <link href="/css/home/swiper.css" rel="stylesheet">
+	<link href="/css/home/magnific-popup.css" rel="stylesheet">
+	<link href="/css/home/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
     <link rel="icon" href="images/icon1.png">
@@ -43,13 +43,12 @@
     </div>
     <!-- end of preloader -->
     
-
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <a class="navbar-brand logo-text page-scroll" href="index.ejs">졸업하면 뭐하지?</a>
+            <a class="navbar-brand logo-text page-scroll" href="/">졸업하면 뭐하지?</a>
 
             <!-- Image Logo 
             <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> -->
@@ -91,7 +90,7 @@
                     </li>
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm" href="./login.ejs">로그인</a>
+                    <a class="btn-outline-sm" href="/login"> 로그인 </a>
                 </span>
             </div>
         </div> <!-- end of container -->
@@ -108,8 +107,7 @@
                         <div class="text-container">
                             <h1>졸업하면 뭐하지?</h1>
                             <p class="p-large">
-                                졸업하면 뭐하지에서는 IT 업계 현직자부터 취업준비생까지 
-                                함께 소통할 수 있고 다양한 직업 정보와 취업에 도움이 되는 자격증 및 공모전 정보를 제공합니다.
+                                IT 분야에서 꿈을 향해 나아가는 모든 이들을 위한 웹 페이지, 여기서 당신의 미래를 시작하세요.
                             </p>
                             <a class="btn-solid-lg page-scroll" href="sign-up.html">가입하기</a>
                         </div> <!-- end of text-container -->
@@ -117,25 +115,25 @@
                     <div class="col-lg-4 col-xl-6">
                         <div class="image-container">
                             <div class="img-wrapper">
-                                <img class="img-fluid" src="pages/images/logo1.png" alt="alternative">
+                                <img class="img-fluid" src="/contents/logo1.png" alt="alternative">
                             </div> <!-- end of img-wrapper -->
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
-            </div> <!-- end of container -->
+            </div> <!-- end of container -->s
         </div> <!-- end of header-content -->
     </header> <!-- end of header -->
     <svg class="header-frame" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 310"><defs><style>.cls-1{fill:#5f4def;}</style></defs><title>header-frame</title><path class="cls-1" d="M0,283.054c22.75,12.98,53.1,15.2,70.635,14.808,92.115-2.077,238.3-79.9,354.895-79.938,59.97-.019,106.17,18.059,141.58,34,47.778,21.511,47.778,21.511,90,38.938,28.418,11.731,85.344,26.169,152.992,17.971,68.127-8.255,115.933-34.963,166.492-67.393,37.467-24.032,148.6-112.008,171.753-127.963,27.951-19.26,87.771-81.155,180.71-89.341,72.016-6.343,105.479,12.388,157.434,35.467,69.73,30.976,168.93,92.28,256.514,89.405,100.992-3.315,140.276-41.7,177-64.9V0.24H0V283.054Z"/></svg>
     <!-- end of header -->
     	
     <!-- Scripts -->
-    <script src="/pages/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="/pages/js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
-    <script src="/pages/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-    <script src="/pages/js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
-    <script src="/pages/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-    <script src="/pages/js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
-    <script src="/pages/js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
-    <script src="/pages/js/scripts.js"></script> <!-- Custom scripts -->ß
+    <script src="/js/home/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="/js/home/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
+    <script src="/js/home/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+    <script src="/js/home/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+    <script src="/js/home/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+    <script src="/js/home/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+    <script src="/js/home/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
+    <script src="/js/home/scripts.js"></script> <!-- Custom scripts -->ß
 </body>
 </html>
