회원가입 페이지 구현

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -109,6 +109,7 @@
 		<input id="pw" type="password" name="password" placeholder="비밀번호를 입력하세요."><br>
         
         <div style=" text-align: center;">
+        <p class="message">회원이 아니십니까? <a href="/register">회원가입 </a></p>
 		<button id="btn" class="btn btn-outline-sm">로그인</button>
         </div>
     </form>
