회원가입 페이지 구현

--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="/css/home/bootstrap.css" rel="stylesheet"> 
 	<link href="/css/home/styles.css" rel="stylesheet"> 
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     
     <style>
 		body {
@@ -108,7 +108,7 @@
         <input id="confirm-pw" type="password" name="password" placeholder="비밀번호 확인"><br>
         <div style=" text-align: center;">
         <p class="message">이미 회원이신가요? <a href="/login">로그인 </a></p>
-		<button id="btn" class="btn btn-outline-sm">회원가입</button>
+		<p id="btn" class="btn btn-outline-sm">회원가입</p>
         </div>
     </form>
 </body>
