--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -8,108 +8,59 @@
     <link href="/css/home/bootstrap.css" rel="stylesheet"> 
 	<link href="/css/home/styles.css" rel="stylesheet"> 
     <script src="/js/home/login.js" defer></script>
-    
     <style>
 		body {
-			background-color: #5f4dee;
+			background-color: #ffffff;
 		}
 
-		h1 {
+        h3 {
+            margin-top: 30px;
+            margin-bottom: 10px;
+        }
+
+		h2 {
 			text-align: center;
-			margin-top: 0px;
+			margin-top: 10px;
 			color: #000000;
 		}
-
+        
 		form {
 			background-color: #fff; 
 			border-radius: 10px;
 			padding: 20px;
-			width: 350px;
+			width: 500px;
 			margin: 0 auto;
-			margin-top: 250px;
-			box-shadow: 0 0 10px rgba(0,0,0,0.2);
+			margin-top: 100px;
 		}
 
 		label {
 			display: block;
 			margin-bottom: 8px;
+            margin-top: 15px;
 			color: #333;
 		}
 
 		input[type="text"], input[type="password"] {
 			padding: 10px;
-			border: 2px solid #5f4dee;
+			border: 2px solid #348fe4;
 			border-radius: 5px;
 			width: 100%;
 			margin-bottom: 20px;
 			box-sizing: border-box;
 		}
 	</style>
-
-	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-        <div class="container">
-
-            <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <a class="navbar-brand logo-text page-scroll" href="/">졸업하면 뭐하지?</a>
-
-            <!-- Image Logo 
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> -->
-            
-            <!-- Mobile Menu Toggle Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-awesome fas fa-bars"></span>
-                <span class="navbar-toggler-awesome fas fa-times"></span>
-            </button>
-            <!-- end of mobile menu toggle button -->
-
-            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#header"> 메인 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#jobs"> 나와 맞는 직업 찾기 </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#공모전정보"> 공모전 정보 </a>
-                    </li>
-
-                    <!-- Dropdown Menu -->          
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle page-scroll" href="#comunity" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">최신 동향</span></a>
-                            <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">코드 리뷰</span></a>
-                            <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">질의 응답</span></a>
-                        </div>
-                    </li>
-                    <!-- end of dropdown menu -->
-
-                    <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#pricing"> 채용 정보 </a>
-                    </li>
-                </ul>
-                <span class="nav-item">
-                    <a class="btn-outline-sm" href="/login">로그인</a>
-                </span>
-            </div>
-        </div> <!-- end of container -->
-    </nav> <!-- end of navbar -->
-    <!-- end of navigation -->
 </head>
 <body>
     <form>
-        <h1>로그인</h1>
+        <div style="text-align : center;"><a href="/"> <img src="/contents/logo.png" style="width: 200px; height: 120px;" href="/" alt="alternative"></a></div>
+        <h3 style="text-align: center;">환영합니다.</h3>
+        <p style="text-align: center;">졸업하면 뭐하지?는 IT 지식공유 포럼입니다.</p>
 		<label for="username">아이디</label>
 		<input id="user" type="text" name="username" placeholder="아이디를 입력하세요."><br>
-
 		<label for="password">비밀번호</label>
 		<input id="pw" type="password" name="password" placeholder="비밀번호를 입력하세요."><br>
-        
         <div style=" text-align: center;">
-        <p class="message">회원이 아니십니까? <a href="/register">회원가입 </a></p>
+        <p class="message">아직 회원이 아니신가요? <a href="/register">회원가입 </a></p>
 		<button id="btn" class="btn btn-outline-sm">로그인</button>
         </div>
     </form>
